Fixed CSS alignment

--- a/src/App.css
+++ b/src/App.css
@@ -216,12 +216,13 @@ img {
     /* -ms-flex: 25%; IE10 */
     max-width: 49%;
     /* max-width: 25%; */
+    display: flex;
     padding: 0 4px;
+    align-items: center;
 }
 
 .column img {
     /* vertical-align: middle; */
-    margin-top: 2em;
     width: 100%;
     display: block;
     margin-left: auto;
@@ -254,8 +255,12 @@ img {
         flex: 100%;
         max-width: 100%;
         /* height: 100%; */
+        display: flex;
+    padding: 0 4px;
+    align-items: center;
     }
     .column img {
+        
         max-width: 60%;
         display: block;
         margin-left: auto;
@@ -283,6 +288,9 @@ img {
         flex: 100%;
         max-width: 100%;
         /* height: 100%; */
+        display: flex;
+    padding: 0 4px;
+    align-items: center;
     }
     .column img {
         max-width: 70%;
